# botpen

./: .dockerignore  .env  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODESTYLE.md  CONTRIBUTING.md  Dockerfile.hub  README.AGENTS.md  README.md  alembic.ini  botpen  complexipy-snapshot.json  config.py  docker-compose.hub.yml  lock.sh  mailbox.jsonl  manage.py  messages  migrate.sql  pyproject.toml
.claude/skills/agent-bootstrap/: SKILL.md
.claude/skills/bootstrap-agent/: SKILL.md
.claude/skills/bootstrap-agents/: SKILL.md
.claude/skills/e2e/: SKILL.md
.claude/skills/messages/: SKILL.md
.claude/skills/permissions/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/wipe/: SKILL.md
.githooks/: pre-commit  pre-push
migrations/: env.py  script.py.mako
migrations/versions/: 1782222114__a96cf2256884__baseline_schema.py
scripts/: e2e-hub.sh
src/botpen/: __init__.py  _entrypoints.py  cli.py  stack_catalog.py  stack_schema.py
src/botpen/commands/: __init__.py  clean.py  console.py  db.py  permissions.py  playground.py  render.py  scaffold.py  serve.py  start.py  teardown.py  utils.py
src/botpen/commands/lib/: utils.py
src/botpen/core/: __init__.py  db.py  models.py
src/botpen/hub/: __init__.py  cli.py  daemon.py  shared.py
src/botpen/services/: __init__.py  hub.py  messages.py  permissions.py  request_log.py  sessions.py  utils.py
src/botpen/services/scaffolding/: __init__.py  docker.py  scaffold.py  templates.py
src/bots/: cli.py
src/bots/commands/: __init__.py  docker.py  messages.py  permissions.py  scaffold.py  serve.py  teardown.py  utils.py
src/bots/core/: db.py  models.py
src/bots/services/: __init__.py  messages.py  permissions.py  sessions.py  utils.py
src/bots/services/scaffolding/: docker.py  scaffold.py
src/coordinate_cli/: __init__.py  __main__.py  _identity.py  cli.py  client.py  daemons.py  idl.py
src/messaging/: __init__.py  cli.py  db.py  queries.py
src/resources/: hub.thrift
src/resources/skeleton/: .dockerignore  .env.jinja  .gitignore  Dockerfile.jinja  copier.yml  docker-compose.yml.jinja  entrypoint.sh.jinja
src/resources/skeleton/.claude/: settings.json.jinja
src/resources/skeleton/.claude/skills/bootstrap-agent/: SKILL.md.jinja
src/resources/skeleton/.claude/skills/go/: SKILL.md.jinja
src/resources/skeleton/.claude/skills/start/: SKILL.md.jinja
