[project]
name = "messaging"
version = "0.1.0"
description = "SQLite-backed mailbox for coordinating agents (register / write / read)."
readme = "README.md"
authors = [{ name = "knl.bhg@gmail.com", email = "knl.bhg@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
  "click>=8.1",
  "python-dotenv>=1.0",
  "rich>=15.0.0",
  "ruff>=0.15.18",
]

[project.scripts]
messages = "messaging.cli:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/F: default pycodestyle + pyflakes
# UP: pyupgrade — enforces modern Python syntax, including type hint style:
#   UP006  list[T] instead of List[T]
#   UP007  X | Y instead of Union[X, Y]
#   UP045  X | None instead of Optional[X]
#   UP035  remove deprecated typing aliases
# Auto-fixed at commit time by ruff check --fix, so violations never reach CI.
select = ["E", "F", "UP"]
ignore = [
  "E501",
] # ruff format handles line length for code; SQL query strings are inherently long
