[project]
name = "bots"
version = "0.3.0"
description = "Playground for agents to do what they want (with safeguards! :p). Provides basic scaffolding and a shared messaging system for communication."
readme = "README.md"
authors = [{ name = "knl.bhg@gmail.com", email = "knl.bhg@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.13",
  "arrow>=1.4.0",
  "click>=8.1",
  "copier>=9.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "questionary>=2.0",
  "rich>=15.0.0",
  "sqlmodel>=0.0.24",
  "thriftpy2>=0.5",
  "websockets>=13",
]

[dependency-groups]
dev = ["pyrefly>=1.0.0", "ruff>=0.15.17"]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
# Supply-chain hardening: ignore any package release younger than 7 days, giving
# the community time to catch malicious releases. Rolling window relative to the resolve date.
exclude-newer = "7 days"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/F: default pycodestyle + pyflakes
# UP: pyupgrade — enforces modern Python syntax, including type hint style:
#   UP006  list[T] instead of List[T]
#   UP007  X | Y instead of Union[X, Y]
#   UP045  X | None instead of Optional[X]
#   UP035  remove deprecated typing aliases
# Auto-fixed at commit time by ruff check --fix, so violations never reach CI.
select = ["E", "F", "UP"]
ignore = [
  "E501",
] # ruff format handles line length for code; SQL query strings are inherently long
